--- a/prototype/styles.css
+++ b/prototype/styles.css
@@ -4,6 +4,7 @@
   margin: 0;
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
+  user-select: none;
 }
 
 body {
@@ -28,13 +29,100 @@ body {
   font-size: 30px;
   padding: 5px;
   border: none;
-  border-bottom: 2px solid gray;
+  border-bottom: 2px solid white;
   outline: none;
   background-color: transparent;
-  color: gray;
+  color: white;
 }
 
-.search:focus {
-  border-bottom-color: white;
+.settings-icon {
+  width: 30px;
+  height: 30px;
   color: white;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  /* opacity: 0.5; */
+  z-index: 5;
+  fill: #fff;
+  cursor: pointer;
+}
+
+.settings-panel {
+  width: 500px;
+  height: 100vh;
+  position: absolute;
+  right: 0;
+  top: 0;
+  border-left: 2px solid white;
+  display: none;
+  z-index: 3;
+  background-color: black;
+  opacity: 0.8;
+}
+
+.settings-label {
+  color: white;
+  font-size: 30px;
+  margin: 20px;
+}
+
+.settings-section {
+  width: 90%;
+  margin: 10px auto;
+  user-select: none;
+  border-bottom: 1px solid white;
+  padding-bottom: 10px;
+}
+
+.settings-section-title-container {
+  display: flex;
+  justify-content: left;
+  cursor: pointer;
+}
+
+.settings-chevron-down-icon,
+.settings-chevron-right-icon {
+  width: 20px;
+  height: 20px;
+  margin-right: 15px;
+  margin-top: 3px;
+}
+
+.settings-chevron-right-icon {
+  rotate: 270deg;
+  margin-top: 4px;
+}
+
+.settings-section-title {
+  color: white;
+  font-size: 24px;
+}
+
+.settings-section-content {
+  color: white;
+}
+
+.theme-preset {
+  width: 100px;
+  height: 35px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 5px 0;
+  border: 2px solid white;
+}
+
+.theme-preset-text {
+  color: white;
+  text-align: center;
+  font-size: 22px;
+  padding-top: 3px;
+}
+
+.themes-content {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-top: 10px;
+  display: none;
 }
