Add autofocused setting

--- a/prototype/styles.css
+++ b/prototype/styles.css
@@ -101,6 +101,7 @@ body {
 
 .settings-section-content {
   color: white;
+  display: none;
 }
 
 .theme-preset {
@@ -125,4 +126,58 @@ body {
   flex-wrap: wrap;
   margin-top: 10px;
   display: none;
+}
+
+.search-setting-label {
+  font-size: 20px;
+}
+
+.search-setting-option {
+  display: flex;
+  width: 100%;
+  margin-top: 10px;
+  justify-content: space-between;
+}
+
+/* Toggle */
+input[type=checkbox]{
+  height: 0;
+  width: 0;
+  visibility: hidden;
+}
+
+label {
+  cursor: pointer;
+  text-indent: -9999px;
+  width: 45px;
+  height: 25px;
+  background: grey;
+  display: block;
+  border-radius: 100px;
+  position: relative;
+}
+
+label:after {
+  content: '';
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  width: 15px;
+  height: 15px;
+  background: #fff;
+  border-radius: 90px;
+  transition: 0.3s;
+}
+
+input:checked + label {
+  background: #0096FF;
+}
+
+input:checked + label:after {
+  left: calc(100% - 5px);
+  transform: translateX(-100%);
+}
+
+label:active:after {
+  width: 30px;
 }
