--- a/popup.css
+++ b/popup.css
@@ -1,14 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
+* {
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+  user-select: none;
+}
+
 body {
   background-color: black;
-  font-family: 'Roboto', sans-serif;
 }
 
 .clock {
   color: white;
   font-size: 130px;
-  margin: 0;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -19,18 +24,160 @@ body {
   position: absolute;
   top: calc(50% + 100px);
   left: 50%;
-  width: 500px;
   transform: translate(-50%, -50%);
-  outline: none;
-  background: transparent;
-  border: none;
-  border-bottom: 2px solid gray;
-  color: gray;
-  padding: 5px;
+  width: 500px;
   font-size: 30px;
+  padding: 5px;
+  border: none;
+  border-bottom: 2px solid white;
+  outline: none;
+  background-color: transparent;
+  color: white;
 }
 
-.search:focus {
-  border-bottom-color: white;
+.settings-icon {
+  width: 30px;
+  height: 30px;
   color: white;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  /* opacity: 0.5; */
+  z-index: 5;
+  fill: #fff;
+  cursor: pointer;
+}
+
+.settings-panel {
+  width: 500px;
+  height: 100vh;
+  position: absolute;
+  right: 0;
+  top: 0;
+  border-left: 2px solid white;
+  display: none;
+  z-index: 3;
+  background-color: black;
+  opacity: 0.8;
+}
+
+.settings-label {
+  color: white;
+  font-size: 30px;
+  margin: 20px;
+}
+
+.settings-section {
+  width: 90%;
+  margin: 10px auto;
+  user-select: none;
+  border-bottom: 1px solid white;
+  padding-bottom: 10px;
+}
+
+.settings-section-title-container {
+  display: flex;
+  justify-content: left;
+  cursor: pointer;
+}
+
+.settings-chevron-down-icon,
+.settings-chevron-right-icon {
+  width: 20px;
+  height: 20px;
+  margin-right: 15px;
+  margin-top: 3px;
+}
+
+.settings-chevron-right-icon {
+  rotate: 270deg;
+  margin-top: 4px;
+}
+
+.settings-section-title {
+  color: white;
+  font-size: 24px;
+}
+
+.settings-section-content {
+  color: white;
+  display: none;
+}
+
+.theme-preset {
+  width: 100px;
+  height: 35px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 5px 0;
+  border: 2px solid white;
+}
+
+.theme-preset-text {
+  color: white;
+  text-align: center;
+  font-size: 22px;
+  padding-top: 3px;
+}
+
+.themes-content {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-top: 10px;
+  display: none;
+}
+
+.search-setting-label {
+  font-size: 20px;
+}
+
+.search-setting-option {
+  display: flex;
+  width: 100%;
+  margin-top: 10px;
+  justify-content: space-between;
+}
+
+/* Toggle */
+input[type=checkbox]{
+  height: 0;
+  width: 0;
+  visibility: hidden;
+}
+
+label {
+  cursor: pointer;
+  text-indent: -9999px;
+  width: 45px;
+  height: 25px;
+  background: grey;
+  display: block;
+  border-radius: 100px;
+  position: relative;
+}
+
+label:after {
+  content: '';
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  width: 15px;
+  height: 15px;
+  background: #fff;
+  border-radius: 90px;
+  transition: 0.3s;
+}
+
+input:checked + label {
+  background: #0096FF;
+}
+
+input:checked + label:after {
+  left: calc(100% - 5px);
+  transform: translateX(-100%);
+}
+
+label:active:after {
+  width: 30px;
 }
