--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@
 :root {
   --text-color: #FFFFFF;
   --background-color: #000000;
+  --text-opacity: 1.0;
+  --background-opacity: 1.0;
 }
 
 * {
@@ -12,8 +14,14 @@
   user-select: none;
 }
 
-body {
+.background {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
   background-color: var(--background-color);
+  opacity: var(--background-opacity);
 }
 
 .clock {
@@ -23,6 +31,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  opacity: var(--text-opacity);
 }
 
 .search {
@@ -38,6 +47,7 @@ body {
   outline: none;
   background-color: transparent;
   color: var(--text-color);
+  opacity: var(--text-opacity);
 }
 
 .settings-icon {
@@ -50,10 +60,11 @@ body {
   z-index: 5;
   fill: var(--text-color);
   cursor: pointer;
+  opacity: var(--text-opacity);
 }
 
 .settings-panel {
-  width: 500px;
+  width: 600px;
   height: 100vh;
   position: absolute;
   right: 0;
@@ -63,12 +74,14 @@ body {
   z-index: 3;
   background-color: var(--background-color);
   opacity: 0.8;
+  /* opacity: 1; */
 }
 
 .settings-label {
   color: var(--text-color);
   font-size: 30px;
   margin: 20px;
+  /* opacity: var(--text-opacity); */
 }
 
 .settings-section {
@@ -85,6 +98,13 @@ body {
   cursor: pointer;
 }
 
+.settings-sub-section-label {
+  color: var(--text-color);
+  font-size: 22px;
+  margin-top: 10px;
+  /* opacity: var(--text-opacity); */
+}
+
 .settings-chevron-down-icon,
 .settings-chevron-right-icon {
   width: 20px;
@@ -92,6 +112,7 @@ body {
   margin-right: 15px;
   margin-top: 3px;
   fill: var(--text-color);
+  /* opacity: var(--text-opacity); */
 }
 
 .settings-chevron-right-icon {
@@ -102,11 +123,13 @@ body {
 .settings-section-title {
   color: var(--text-color);
   font-size: 24px;
+  /* opacity: var(--text-opacity); */
 }
 
 .settings-section-content {
   color: white;
   display: none;
+  /* opacity: var(--text-opacity); */
 }
 
 .theme-preset {
@@ -129,11 +152,12 @@ body {
   justify-content: space-between;
   flex-wrap: wrap;
   margin-top: 10px;
-  display: none;
+  /* display: none; */
 }
 
 .search-setting-label {
   font-size: 20px;
+  /* opacity: var(--text-opacity); */
 }
 
 .search-setting-option {
@@ -143,11 +167,22 @@ body {
   justify-content: space-between;
 }
 
+.opacity-range-container {
+  display: flex;
+  gap: 10px;
+  margin-top: 3px;
+}
+
 /* Toggle */
 input[type=checkbox]{
   height: 0;
   width: 0;
   visibility: hidden;
+}
+
+.opacity-range {
+  margin-top: -5px;
+  accent-color: var(--text-color);
 }
 
 label {
