--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,8 @@
 
 .settings-panel--expanded {
   border-left: 2px solid var(--text-color);
-  width: 40vw;
+  /* width: 40vw; */
+  width: 600px;
   display: block;
 }
 
@@ -139,7 +140,7 @@
 }
 
 .settings-section-content--expanded {
-  max-height: 300px;
+  max-height: 500px;
 }
 
 .theme-preset {
@@ -181,6 +182,22 @@
   display: flex;
   gap: 10px;
   margin-top: 3px;
+}
+
+.color-picker-container {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
+#bg-color,
+#fg-color {
+  background-color: transparent;
+  /* border-color: transparent; */
+  border: 3px solid white;
+  border-radius: 5px;
+  padding: 0;
+  height: 28px;
 }
 
 /* Toggle */
