--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url(styles/settings.css);
+@import url(styles/toggle.css);
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 :root {
@@ -64,234 +66,8 @@
   padding: 0 10px;
 }
 
-.settings-icon {
-  width: 30px;
-  height: 30px;
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  /* opacity: 0.5; */
-  z-index: 5;
-  fill: var(--text-color);
-  cursor: pointer;
-  opacity: var(--text-opacity);
-  transition: 0.3s;
-}
-
-.settings-panel {
-  width: 0;
-  height: 100vh;
-  position: absolute;
-  right: 0;
-  top: 0;
-  z-index: 3;
-  background-color: var(--background-color);
-  opacity: 0.8;
-  /* opacity: 1; */
-  overflow: hidden;
-  transition: 0.3s;
-}
-
-.settings-panel--expanded {
-  border-left: 2px solid var(--text-color);
-  /* width: 40vw; */
-  width: 600px;
-  display: block;
-}
-
-.settings-label {
-  color: var(--text-color);
-  font-size: 30px;
-  margin: 20px;
-  /* opacity: var(--text-opacity); */
-}
-
-.settings-section {
-  width: 90%;
-  margin: 10px auto;
-  user-select: none;
-  border-bottom: 1px solid var(--text-color);
-  padding-bottom: 10px;
-}
-
-.settings-section-title-container {
-  display: flex;
-  justify-content: left;
-  cursor: pointer;
-}
-
-.settings-sub-section-label {
-  color: var(--text-color);
-  font-size: 22px;
-  margin-top: 10px;
-  /* opacity: var(--text-opacity); */
-}
-
-.settings-chevron-right-icon {
-  width: 20px;
-  height: 20px;
-  margin-right: 15px;
-  margin-top: 3px;
-  fill: var(--text-color);
-  transition: 0.3s;
-  rotate: -90deg;
-  /* opacity: var(--text-opacity); */
-  margin-top: 4px;
-}
-
-.settings-section-title {
-  color: var(--text-color);
-  font-size: 24px;
-  /* opacity: var(--text-opacity); */
-}
-
-.settings-section-content {
-  color: white;
-  max-height: 0;
-  overflow: hidden;
-  /* opacity: var(--text-opacity); */
-  transition: all 0.3s ease-in-out;
-}
-
-.settings-section-content--expanded {
-  max-height: 500px;
-}
-
-.theme-preset {
-  width: 100px;
-  height: 35px;
-  border-radius: 5px;
-  cursor: pointer;
-  margin: 5px 0;
-  border: 2px solid transparent;
-}
-
-.theme-preset-text {
-  text-align: center;
-  font-size: 22px;
-  padding-top: 3px;
-}
-
-.themes-content {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  margin-top: 10px;
-  /* display: none; */
-}
-
-.search-setting-label {
-  font-size: 20px;
-  /* opacity: var(--text-opacity); */
-}
-
-.search-setting-option {
-  display: flex;
-  width: 100%;
-  margin-top: 10px;
-  justify-content: space-between;
-}
-
-.opacity-range-container {
-  display: flex;
-  gap: 10px;
-  margin-top: 3px;
-}
-
-.color-picker-container {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 10px;
-}
-
-#bg-color,
-#fg-color {
-  background-color: transparent;
-  /* border-color: transparent; */
-  border: 3px solid white;
-  border-radius: 5px;
-  padding: 0;
-  height: 28px;
-}
-
-.search-icons-container {
-  display: flex;
-  gap: 15px;
-}
-
-.search-engine-icon {
-  width: 32px;
-  height: 32px;
-  padding: 2px;
-  border-radius: 5px;
-  cursor: pointer;
-  border: 2px solid transparent;
-}
-
-.search-engine-icon-active {
-  /* background-color: #e9e4e4; */
-  border: 2px solid var(--text-color);
-}
-
-/* Toggle */
-input[type=checkbox]{
+input[type="checkbox"] {
   height: 0;
   width: 0;
   visibility: hidden;
-}
-
-.opacity-range {
-  margin-top: -5px;
-  accent-color: var(--text-color);
-}
-
-label {
-  cursor: pointer;
-  text-indent: -9999px;
-  width: 45px;
-  height: 25px;
-  background: grey;
-  display: block;
-  border-radius: 100px;
-  position: relative;
-}
-
-label:after {
-  content: '';
-  position: absolute;
-  top: 5px;
-  left: 5px;
-  width: 15px;
-  height: 15px;
-  /* background: #fff; */
-  background-color: var(--background-color);
-  border-radius: 90px;
-  transition: 0.3s;
-}
-
-input:checked + label {
-  background: var(--text-color);
-}
-
-input:checked + label:after {
-  left: calc(100% - 5px);
-  transform: translateX(-100%);
-}
-
-label:active:after {
-  width: 30px;
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(90deg);
-  }
-}
-
-.spin {
-  animation: spin 0.3s;
-  transform: rotate(90deg);
 }
