Add quotes and layout type in settings

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
 @import url(styles/settings.css);
 @import url(styles/toggle.css);
+@import url(styles/quote.css);
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 :root {
-  --text-color: #FFFFFF;
+  --text-color: #6a0dad;
   --background-color: #000000;
   --text-opacity: 1.0;
   --background-opacity: 1.0;
@@ -26,11 +28,38 @@
   opacity: var(--background-opacity);
 }
 
+.quote-section {
+  position: fixed;
+  left: 0%;
+  width: 50vw;
+  height: 100vh;
+  top: 0;
+  display: none;
+}
+
+.clock-and-search-section-only {
+  position: fixed;
+  left: 0%;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  display: none;
+}
+
+.clock-and-search-section-quoted {
+  position: fixed;
+  left: 50%;
+  width: 50vw;
+  height: 100vh;
+  top: 0;
+  display: none;
+}
+
 .clock {
   color: var(--text-color);
   font-size: 130px;
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
   opacity: var(--text-opacity);
@@ -38,7 +67,7 @@
 
 .search-container {
   position: absolute;
-  top: calc(50% + 100px);
+  top: calc(40% + 100px);
   left: 50%;
   transform: translate(-50%, -50%);
 }
