--- a/styles/settings.css
+++ b/styles/settings.css
@@ -20,10 +20,11 @@
   top: 0;
   z-index: 3;
   background-color: var(--background-color);
-  opacity: 0.8;
+  /* opacity: 0.8; */
   /* opacity: 1; */
   overflow: hidden;
   transition: 0.3s;
+  overflow: auto;
 }
 
 .settings-panel--expanded {
@@ -88,7 +89,7 @@
 }
 
 .settings-section-content--expanded {
-  max-height: 500px;
+  max-height: 700px;
 }
 
 .theme-preset {
@@ -169,6 +170,125 @@
 .opacity-range {
   margin-top: -5px;
   accent-color: var(--text-color);
+}
+
+.layouts-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.layout {
+  width: calc(50% - 5px);
+  height: 150px;
+  border: 2px solid var(--text-color);
+  border-radius: 5px;
+  margin-top: 10px;
+  position: relative;
+}
+
+.layout-radio-input {
+  scale: 1.2;
+  position: absolute;
+  top: 7px;
+  left: 7px;
+  z-index: 10;
+}
+
+.layout-left-section {
+  position: absolute;
+  left: 0%;
+  top: 0;
+  width: 50%;
+  height: 100%;
+  border-right: 2px solid var(--text-color);
+}
+
+.layout-right-section {
+  position: absolute;
+  left: 50%;
+  top: 0;
+  width: 50%;
+  height: 100%;
+}
+
+.layout-top-section {
+  width: 100%;
+  height: 50%;
+  position: absolute;
+  border-bottom: 2px solid var(--text-color);
+}
+
+.layout-bottom-section {
+  width: 100%;
+  height: 50%;
+  position: absolute;
+  /* border-bottom: 2px solid var(--text-color); */
+  top: 50%;
+}
+
+.quote-icon,
+.link-icon {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  fill: var(--text-color);
+}
+
+.clock-and-search-icon {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.clock-icon,
+.search-icon,
+.left-clock-icon,
+.right-search-icon {
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: calc(50% - 20px);
+  left: calc(50% - 20px);
+  transform: translate(-50%, -50%);
+  fill: var(--text-color);
+}
+
+.search-icon {
+  top: calc(50% + 20px);
+  left: calc(50% + 20px);
+}
+
+.left-clock-icon {
+  top: 50%;
+  left: -10%;
+}
+
+.right-search-icon {
+  top: 50%;
+  left: 110%;
+}
+
+.diagonal-separator-line,
+.vertical-separator-line {
+  border-bottom: 3px solid var(--text-color);
+  width: 100%;
+  transform: rotate(-45deg);
+  transform-origin: right;
+  margin-top: 6px;
+  margin-left: -7px;
+}
+
+.vertical-separator-line {
+  transform: rotate(-90deg);
+  margin-left: -12px;
+  width: 75%;
 }
 
 @keyframes spin {
