--- a/styles/settings.css
+++ b/styles/settings.css
@@ -179,7 +179,8 @@
   flex-wrap: wrap;
 }
 
-.layout {
+.layout,
+.theme-layout {
   width: calc(50% - 5px);
   height: 150px;
   border: 2px solid var(--text-color);
@@ -291,6 +292,27 @@
   transform: rotate(-90deg);
   margin-left: -12px;
   width: 75%;
+}
+
+.modern-theme {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-image: url("https://images.pexels.com/photos/66997/pexels-photo-66997.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+}
+
+.theme-type-label,
+.simple-theme-type-label {
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-size: 40px;
+  transform: translate(-50%, -50%);
+}
+
+.simple-theme-type-label {
+  color: var(--text-color);
 }
 
 @keyframes spin {
