--- a/styles.css
+++ b/styles.css
@@ -71,16 +71,18 @@
 .search {
   width: 500px;
   font-size: 30px;
-  padding: 8px 15px;
-  border: 2px solid var(--text-color);
-  border-radius: 5px;
+  padding: 8px 5px;
+  /* border: 2px solid var(--text-color); */
+  border: none;
+  border-bottom: 2px solid var(--text-color);
+  /* border-radius: 5px; */
   outline: none;
   background-color: transparent;
   color: var(--text-color);
   opacity: var(--text-opacity);
 }
 
-.search-label {
+/* .search-label {
   color: var(--text-color);
   position: absolute;
   top: -12px;
@@ -90,7 +92,7 @@
   background-color: rgba(0, 0, 0, 1);
   padding: 0 10px;
   z-index: 10;
-}
+} */
 
 input[type="checkbox"] {
   height: 0;
