--- a/styles/settings.css
+++ b/styles/settings.css
@@ -19,7 +19,8 @@
   right: 0;
   top: 0;
   z-index: 3;
-  background-color: var(--background-color);
+  /* background-color: var(--background-color); */
+  background-color: rgba(0, 0, 0, 0.5);
   /* opacity: 0.7; */
   /* opacity: 1; */
   overflow: hidden;
@@ -188,6 +189,7 @@
   margin-top: 10px;
   position: relative;
   cursor: pointer;
+  background-color: var(--background-color);
 }
 
 .layout-radio-input {
@@ -205,6 +207,7 @@
   width: 50%;
   height: 100%;
   border-right: 2px solid var(--text-color);
+  background-color: var(--background-color);
 }
 
 .layout-right-section {
@@ -213,6 +216,7 @@
   top: 0;
   width: 50%;
   height: 100%;
+  background-color: var(--background-color);
 }
 
 .layout-top-section {
@@ -220,6 +224,7 @@
   height: 50%;
   position: absolute;
   border-bottom: 2px solid var(--text-color);
+  background-color: var(--background-color);
 }
 
 .layout-bottom-section {
@@ -228,6 +233,7 @@
   position: absolute;
   /* border-bottom: 2px solid var(--text-color); */
   top: 50%;
+  background-color: var(--background-color);
 }
 
 .quote-icon,
