Add quick link design and add quick link functionality

--- a/styles/settings.css
+++ b/styles/settings.css
@@ -61,6 +61,7 @@
   color: var(--text-color);
   font-size: 22px;
   margin-top: 10px;
+  text-decoration: underline;
   /* opacity: var(--text-opacity); */
 }
 
