--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 @import url(styles/settings.css);
 @import url(styles/toggle.css);
 @import url(styles/quote.css);
+@import url(styles/quick-links.css);
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
@@ -122,4 +123,176 @@ input[type="radio"]:checked::before {
   height: 8px;
   border-radius: 50%;
   background-color: var(--text-color); /* Change this to the desired color */
+}
+
+/* MOVE TO QUICK LINKS */
+.quick-links-section {
+  /* background-color: rgb(51, 47, 47); */
+  position: absolute;
+}
+
+.quick-links-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: left;
+  height: 330px;
+  gap: 20px;
+  align-content: flex-start;
+  overflow-y: auto;
+}
+
+.quick-link {
+  width: 100px;
+  min-height: 100px;
+  border: 2px solid var(--text-color);
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.quick-link-icon,
+.add-quick-link-icon {
+  width: 50px;
+  height: 50px;
+  display: block;
+  margin: auto;
+  margin-top: 7px;
+  margin-bottom: 5px;
+}
+
+.add-quick-link-icon { 
+  display: none;
+}
+
+.quick-link-title {
+  color: var(--text-color);
+  width: 100%;
+  font-size: 18px;
+  text-align: center;
+  /* text-overflow: ellipsis; */
+  /* overflow: hidden; */
+  /* white-space: nowrap; */
+  padding-bottom: 5px;
+}
+
+.quick-link-add-icon {
+  width: 45px;
+  height: 45px;
+  fill: var(--text-color);
+  margin-top: 27.5px;
+  margin-left: 27.5px;
+  cursor: pointer;
+}
+
+.add-quick-link-panel {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.add-quick-link-form {
+  width: 500px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #2A3439;
+  border-radius: 5px;
+}
+
+.add-quick-link-form-title {
+  font-size: 30px;
+  color: white;
+  margin: 15px 15px;
+}
+
+.link-title-input,
+.link-url-input {
+  width: 300px;
+  margin: 0 15px;
+  background-color: transparent;
+  border: none;
+  border-bottom: 2px solid gray;
+  font-size: 18px;
+  display: block;
+  outline: none;
+  padding: 2px 5px;
+  color: gray;
+}
+
+.link-url-input {
+  margin-bottom: 40px;
+}
+
+.link-title-input:focus,
+.link-url-input:focus {
+  border-color: white;
+  color: white;
+}
+
+.link-title-label,
+.link-url-label {
+  margin: 5px 15px;
+  color: white;
+  font-size: 18px;
+  display: block;
+}
+
+.link-url-label {
+  margin-top: 20px;
+}
+
+.quick-link-preview {
+  right: 15px;
+  position: absolute;
+  top: 105px;
+}
+
+.add-quick-link-close-icon {
+  width: 30px;
+  height: 30px;
+  fill: gray;
+  position: absolute;
+  top: 18px;
+  right: 15px;
+}
+
+.add-quick-link-close-icon:hover {
+  fill: white;
+  cursor: pointer;
+}
+
+.add-quick-link-save-button,
+.add-quick-link-cancel-button {
+  background-color: transparent;
+  border: 2px solid gray;
+  color: gray;
+  font-size: 20px;
+  border-radius: 5px;
+  padding: 5px 10px;
+  width: 100px;
+}
+
+.add-quick-link-save-button:hover,
+.add-quick-link-cancel-button:hover {
+  color: white;
+  border-color: white;
+  cursor: pointer;
+}
+
+.add-quick-link-buttons-container {
+  width: 100%;
+  padding: 0 15px;
+  display: flex;
+  justify-content: right;
+  margin-bottom: 15px;
+  gap: 15px;
 }
