--- a/styles.css
+++ b/styles.css
@@ -35,15 +35,6 @@
   background-position: center;
 }
 
-.quote-section {
-  position: fixed;
-  left: 0%;
-  width: 50vw;
-  height: 100vh;
-  top: 0;
-  display: none;
-}
-
 .clock-and-search-section {
   position: fixed;
   left: 0%;
@@ -122,4 +113,24 @@ input[type="radio"]:checked::before {
   height: 8px;
   border-radius: 50%;
   background-color: var(--text-color); /* Change this to the desired color */
+}
+
+@media only screen and (max-width: 430px) {
+  .search-container {
+    display: none;
+  }
+
+  .clock {
+    width: 100%;
+    font-size: 23vw;
+    text-align: center;
+    top: 50%;
+  }
+
+  .clock-and-search-section {
+    height: 20vh !important;
+    width: 100% !important;
+    left: 0 !important;
+    position: relative !important;
+  }
 }
