--- a/styles/quote.css
+++ b/styles/quote.css
@@ -1,4 +1,13 @@
 /* center the blockquote in the page */
+.quote-section {
+  position: fixed;
+  left: 0%;
+  width: 50vw;
+  height: 100vh;
+  top: 0;
+  display: none;
+}
+
 .blockquote-wrapper {
   display: flex;
   height: 100%;
@@ -58,4 +67,10 @@
   margin: 0;
   padding-top: 20px;
   z-index: 1;
+}
+
+@media only screen and (max-width: 430px) {
+  .quote-section {
+    display: none !important;
+  }
 }
